--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,7 +21,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.my_amplify_app"
+        applicationId = "com.truthnote"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = 24
@@ -30,11 +30,21 @@ android {
         versionName = flutter.versionName
     }
 
+    signingConfigs {
+        release {
+            keyAlias System.getenv("MY_KEY_ALIAS") ?: project.properties['MY_KEY_ALIAS']
+            keyPassword System.getenv("MY_KEY_PASSWORD") ?: project.properties['MY_KEY_PASSWORD']
+            storeFile file(System.getenv("MY_STORE_FILE") ?: project.properties['MY_STORE_FILE'])
+            storePassword System.getenv("MY_STORE_PASSWORD") ?: project.properties['MY_STORE_PASSWORD']
+        }
+    }
+
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            signingConfig signingConfigs.release
+            minifyEnabled false
+            shrinkResources false
         }
     }
 }
