--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   amplify_auth_cognito: ^2.0.0
   amplify_authenticator: ^2.0.0
   amplify_api: ^2.0.0
+  geolocator: ^9.0.2
+  google_maps_flutter: ^2.3.0
+  image_picker: ^0.8.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
